deployment/base/frontend-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: excalidraw-refined
    app.kubernetes.io/component: frontend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: excalidraw-refined
      app.kubernetes.io/component: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: excalidraw-refined
        app.kubernetes.io/component: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/iamshobe/excalidraw-refined_frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
