deployment/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app.kubernetes.io/component: backend
spec:
    selector:
        app.kubernetes.io/name: excalidraw-refined
        app.kubernetes.io/component: backend
    ports:
        - protocol: TCP
          port: 8000
          targetPort: http
