deployment/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app.kubernetes.io/component: frontend
spec:
    selector:
        app.kubernetes.io/name: excalidraw-refined
        app.kubernetes.io/component: frontend
    ports:
        - protocol: TCP
          port: 80
          targetPort: http
          name: http
